@@ -31,7 +31,7 @@ $lang_charset = 'utf-8';
 $lang_text_dir = 'ltr'; // ('ltr' for left to right, 'rtl' for right to left)
 
 // shortcuts for Byte, Kilo, Mega
-$lang_byte_units = array('Bytes', 'Ko', 'Mo');
+$lang_byte_units = array('Bytes', 'Ko', 'Mo', 'Go');
 $lang_decimal_separator = array(',', '.');  //cpg1.5 // symbol used to separate thousands from hundreds and rounded number from  decimal place
 
 // Day of weeks and months
